--- a/platformio.ini
+++ b/platformio.ini
@@ -16,9 +16,10 @@ monitor_speed = 115200
 extra_scripts = post:./upload_script.py ; post is needed here in order for UNIT TESTING to work
 test_build_project_src = true 
 lib_deps = 
+ ArduinoJson
+ StreamUtils
  WiFi101
  868 ; Arduino SD Library
- ArduinoJson
 
 ; [env:native]
 ; platform = native
